Preferences cleanup C (ExporterFactory & setPreviewStyle) (#9998)
* Simple code maintenance (moving around, simplifying, extracting)

* Removed get-set-PreviewStyle, added javadoc, simplified tests

* Moved entryNumber from ExporterFactory to NumberClass

* Extracted JournalAbbreviationRepository from LayoutFormatterPreferences

* Focused tests and removed superfluous constructor

* Changed UnknownFormatImport to record

* Fixed newInstance() deprecation

* Refactored LinkedFilesEditor

* Extracted JournalAbbreviationsRepository from constructor in exporter

* Extracted JournalAbbreviationsRepository from getCustomExportFormats

* Checkstyle