@@ -3,17 +3,12 @@ package org.jabref.logic.exporter;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import org.jabref.logic.bibtex.FieldPreferences;
 import org.jabref.logic.layout.LayoutFormatterPreferences;
-import org.jabref.logic.xmp.XmpPreferences;
+import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.database.BibDatabaseContext;
-import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
-import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.metadata.SaveOrder;
 
@@ -37,16 +32,14 @@ public class CsvExportFormatTest {
         SaveConfiguration saveConfiguration = mock(SaveConfiguration.class);
         when(saveConfiguration.getSaveOrder()).thenReturn(SaveOrder.getDefaultSaveOrder());
 
-        ExporterFactory exporterFactory = ExporterFactory.create(
-                new ArrayList<>(),
+        exportFormat = new TemplateExporter(
+                "OpenOffice/LibreOffice CSV",
+                "oocsv",
+                "openoffice-csv",
+                "openoffice",
+                StandardFileType.CSV,
                 mock(LayoutFormatterPreferences.class, Answers.RETURNS_DEEP_STUBS),
-                saveConfiguration,
-                mock(XmpPreferences.class),
-                mock(FieldPreferences.class),
-                BibDatabaseMode.BIBTEX,
-                mock(BibEntryTypesManager.class));
-
-        exportFormat = exporterFactory.getExporterByName("oocsv").get();
+                saveConfiguration);
 
         databaseContext = new BibDatabaseContext();
     }
@@ -60,9 +53,8 @@ public class CsvExportFormatTest {
     public void testPerformExportForSingleAuthor(@TempDir Path testFolder) throws Exception {
         Path path = testFolder.resolve("ThisIsARandomlyNamedFile");
 
-        BibEntry entry = new BibEntry();
-        entry.setField(StandardField.AUTHOR, "Someone, Van Something");
-        List<BibEntry> entries = Arrays.asList(entry);
+        BibEntry entry = new BibEntry().withField(StandardField.AUTHOR, "Someone, Van Something");
+        List<BibEntry> entries = List.of(entry);
 
         exportFormat.export(databaseContext, path, entries);
 
@@ -77,9 +69,8 @@ public class CsvExportFormatTest {
     public void testPerformExportForMultipleAuthors(@TempDir Path testFolder) throws Exception {
         Path path = testFolder.resolve("ThisIsARandomlyNamedFile");
 
-        BibEntry entry = new BibEntry();
-        entry.setField(StandardField.AUTHOR, "von Neumann, John and Smith, John and Black Brown, Peter");
-        List<BibEntry> entries = Arrays.asList(entry);
+        BibEntry entry = new BibEntry().withField(StandardField.AUTHOR, "von Neumann, John and Smith, John and Black Brown, Peter");
+        List<BibEntry> entries = List.of(entry);
 
         exportFormat.export(databaseContext, path, entries);
 
@@ -94,9 +85,8 @@ public class CsvExportFormatTest {
     public void testPerformExportForSingleEditor(@TempDir Path testFolder) throws Exception {
         Path path = testFolder.resolve("ThisIsARandomlyNamedFile");
         File tmpFile = path.toFile();
-        BibEntry entry = new BibEntry();
-        entry.setField(StandardField.EDITOR, "Someone, Van Something");
-        List<BibEntry> entries = Arrays.asList(entry);
+        BibEntry entry = new BibEntry().withField(StandardField.EDITOR, "Someone, Van Something");
+        List<BibEntry> entries = List.of(entry);
 
         exportFormat.export(databaseContext, tmpFile.toPath(), entries);
 
@@ -113,7 +103,7 @@ public class CsvExportFormatTest {
         File tmpFile = path.toFile();
         BibEntry entry = new BibEntry();
         entry.setField(StandardField.EDITOR, "von Neumann, John and Smith, John and Black Brown, Peter");
-        List<BibEntry> entries = Arrays.asList(entry);
+        List<BibEntry> entries = List.of(entry);
 
         exportFormat.export(databaseContext, tmpFile.toPath(), entries);
 
